--- a/innovazione.html
+++ b/innovazione.html
@@ -83,13 +83,22 @@
         
             <div id="content" >
                 <div class="sottomenugrigio">
-                    <div class="col-md-4 sottomenugrigiodiv" id="cellasottolineatablu">INNOVAZIONE</div>
-                    <div class="col-md-4 sottomenugrigiodiv">TESTIMONIAL</div>
-                    <div class="col-md-4 sottomenugrigiodiv">PROGETTI</div>
+                    <div class="col-md-4 sottomenugrigiodiv" id="cellasottolineatablu"><h2 class="titoloblu">INNOVAZIONE</h2></div>
+                    <div class="col-md-4 sottomenugrigiodiv"><h2 class="titoloblu">TESTIMONIAL</h2></div>
+                    <div class="col-md-4 sottomenugrigiodiv"><h2 class="titoloblu">PROGETTI</h2></div>
                 </div>
                 <img class="immaginepresentazione" src="img/innovazione/presentazioneinnovazione.png" alt="innovazione tim" />
+                <div>
+                    <div class="col-md-3" ></div>
+                    <div class="col-md-6" >
+                        <br><br><h2 class="titoloblu">PROTAGONISTA DEL CAMBIAMENTO</h2><br>
+                        <p>
+                            Il futuro è un orizzonte che si sposta giorno dopo giorno. La tecnologia permette alle persone di esprimersi e di cogliere le infinite opportunità di un presente in costante cambiamento. La TIM di oggi è protagonista di questo cambiamento, perché porta in sé la solidità tecnologica di Telecom Italia e la visione dinamica e innovatrice che hanno da sempre caratterizzato TIM.  Perché è rivolta a chi nella tecnologia non vede solo uno scambio di dati, ma una condivisione di esperienze, pensieri ed emozioni.  Qualcosa che ci rende tutti più aperti, generosi, ispirati, umani.
+                        </p>
+                    </div>
+                    <div class="col-md-3" ></div>
+                </div>
                 
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
             </div>
 
