--- a/index.html
+++ b/index.html
@@ -38,19 +38,19 @@
                         <div class="col-md-7 left">
                             <ul class="row">
                                 <li class="col-md-2">
-                                    <a href="">Piani</a>
+                                    <a href="piani">Piani</a>
                                 </li>
                                 <li class="col-md-2">
-                                    <a href="">Offerte</a>
+                                    <a href="offerte">Offerte</a>
                                 </li>
                                 <li class="col-md-3">
-                                    <a href="">Smart Life</a>
+                                    <a href="smart-life">Smart Life</a>
                                 </li>
                                 <li class="col-md-3">
-                                    <a href="">Dispositivi</a>
+                                    <a href="dispositi">Dispositivi</a>
                                 </li>
                                 <li class="col-md-2">
-                                    <a href="">Assistenza</a>
+                                    <a href="assistenza">Assistenza</a>
                                 </li>
                             </ul>
                         </div>
@@ -62,10 +62,10 @@
                         <div class="col-md-3 right">
                             <ul class="row">
                                 <li class="col-md-6">
-                                    <a href="">Chi Siamo</a>
+                                    <a href="chi-siamo">Chi Siamo</a>
                                 </li>
                                 <li  class="col-md-6">
-                                    <a href="">Gruppo</a>
+                                    <a href="gruppo">Gruppo</a>
                                 </li>
                             </ul>
                         </div>
