--- a/testimonial.html
+++ b/testimonial.html
@@ -33,7 +33,7 @@
         </style>
          <script>
             var xmlhttp = new XMLHttpRequest();
-            var url = "http://localhost/tim/components/testimonial/getTestimonial.php";
+            var url = "http://guidoantoniomatteo.altervista.org/components/testimonial/getTestimonial.php";
 
             xmlhttp.onreadystatechange=function() 
             {
