--- a/pianicategorie.html
+++ b/pianicategorie.html
@@ -19,7 +19,7 @@
         
         <script>
             var xmlhttp = new XMLHttpRequest();
-            var url = "http://localhost/tim/components/piani/getMainCategory.php";
+            var url = "http://guidoantoniomatteo.altervista.org/components/piani/getMainCategory.php";
 
             xmlhttp.onreadystatechange=function() 
             {
