--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
 		</div>
 
-		<div id="footer" class="row vertical-centered"><!--
+		<div id="footer" class="row middle-align"><!--
                 
 			--><div id="footer-logo" class="col-sm-2 hidden-xs" >
 				<img src="img/footer_logo.png" />
