--- a/testimonial.html
+++ b/testimonial.html
@@ -49,14 +49,7 @@
                 var out="";
 
                 for(i = 0; i < arr.length; i++) {
-                    out += "<div class=\"col-md-12\"\">"+
-                        "<div style=\"z-index: 2;\"><img class=\"img-responsive\"src=\"" + arr[i].foto + "\" alt=\""+ arr[i].nome +"tim\" ></div><div style=\"z-index: 5; position: absolute; bottom: 300px; width: 40%;\"><h1>" + arr[i].nome + 
-                     "</h1></div><div style=\"z-index: 5; position: absolute; bottom: 140px; width: 40%; padding: 20px;\"><h1>" +
-                    arr[i].frase1 + "</h1><br><h1>"
-                   + arr[i].frase2 
-                    +"</h1></div><div style=\"z-index: 5; background-color: #004890; position: absolute; bottom: 300px; right: 0; width: 40%;\">" 
-                    + "<a href=\"" +arr[i].linkspot +"\">guarda lo spot</a>"+
-                    "</div></div>";
+                    out += "<div class=\"col-md-12\"\">"+ "<div style=\"z-index: 2;\"><img class=\"img-responsive\"src=\" " + arr[i].foto + "\" alt=\" "+ arr[i].nome +"tim\"></div><div style=\"z-index: 5; position: absolute; bottom: 300px; width: 40%;\"><h1>" + arr[i].nome + "</h1></div><div style=\"z-index: 5; position: absolute; bottom: 140px; width: 40%; padding: 20px;\"><h1>" + arr[i].frase1 + "</h1><br><h1>" + arr[i].frase2 + "</h1></div><div style=\"z-index: 5; background-color: #004890; position: absolute; bottom: 300px; right: 0; width: 40%;\">" + "<a href=\" " +arr[i].linkspot +"\">guarda lo spot</a>"+"</div></div>";
                 }
                 document.getElementById("id01").innerHTML = out;
             }
@@ -178,9 +171,6 @@
                     <p><br/>Seguici sui principali<br/>Social Network</p>
                 </div>
             </div>
-            
-        </div>
-        
     </body>
 
-</html> 
+</html>
