--- a/asmaincategory.html
+++ b/asmaincategory.html
@@ -126,6 +126,7 @@
 		</div>
             <div id="content">
             <div><h1 class="titolorosso">Assistenza Tecnica</h1></div>
+            <div class="row">
             <div class="col-sm-8">
                 <img src="img/as/assistenza.jpg" alt="assistenza tecnica" class="img-responsive" />
             </div>
@@ -136,7 +137,8 @@
                     <p class="center">Qui trovi le risposte alle domande più frequenti</p>
                 </div>
             </div>
-            <div id="categorie" class="col-md-12 nopadding"></div>
+            </div>
+            <div id="categorie" class="row nopadding"></div>
 
         </div>
         
