--- a/assingola.html
+++ b/assingola.html
@@ -122,10 +122,14 @@
             </div>
         
             <div id="content">
-                <div id="categorie"></div>
-                <div class="col-md-12 nopadding" id="barragrigia"></div>
-                <div class="col-md-12 nopadding">
-                    <div class="col-md-12" id="titolocategoria"></div>
+                <div class="row barratitolo blu-background" id="categorie"></div>
+                <div class="row">
+                    <div class="col-md-12 nopadding" id="barragrigia"></div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12 nopadding">
+                        <div class="col-md-12" id="titolocategoria"></div>
+                    </div>
                 </div>
                 <div id="descrizione"></div>
 
