--- a/smart-life/sky.html
+++ b/smart-life/sky.html
@@ -24,6 +24,7 @@
 <!-- website CSS -->
 <link rel="stylesheet" type="text/css" href="../css/menu.css">
 <link rel="stylesheet" type="text/css" href="../css/style.css">
+<link rel="stylesheet" type="text/css" href="../css/standardimport.css">
 
 <link rel="stylesheet" type="text/css" href="sky.css">
 
@@ -104,12 +105,22 @@
 		</div>
 
 		<div id="content" class="row">
-
-			<div class="menu-blu">
-				<a href="">BENESSERE</a>
-				<a href="">FAMIGLIA</a>
-				<a href="">SERVIZI</a>
-				<a href="">TV & FUN</a>
+			<div class="col-xs-12">
+				<div class="row blu-menu">
+					<div class="col-xs-3 current-link"><a href="">BENESSERE</a></div>
+					<div class="col-xs-3"><a href="">FAMIGLIA</a></div>
+					<div class="col-xs-3"><a href="">SERVIZI</a></div>
+					<div class="col-xs-3"><a href="">TV & FUN</a></div>
+				</div>
+				
+				<div class="row grey-menu">
+					<div class="col-xs-2"><a href="" class="">Tv</a></div>
+					<div class="col-xs-2 current-link"><a href="" class="">Music</a></div>
+					<div class="col-xs-3"><a href="" class="">Reading</a></div>
+					<div class="col-xs-2"><a href="" class="">Games</a></div>
+					<div class="col-xs-3"><a href="" class="">Calcio</a></div>
+					
+				</div>
 			</div>
 
 		</div>
