--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <!-- website CSS -->
 <link rel="stylesheet" type="text/css" href="css/menu.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
+<link rel="stylesheet" type="text/css" href="css/standardimport.css">
 
 </head>
 
@@ -42,11 +43,11 @@
 
 					<div class="col-lg-7 left">
 						<div class="row">
-							<a class="col-lg-2" href="piani">Piani</a>
+							<a class="col-lg-2 highlight" href="piani">Piani</a>
 							<a class="col-lg-2" href="offerte">Offerte</a>
 							<a class="col-lg-3" href="smart-life">Smart Life</a>
-							<a class="col-lg-3" href="dispositi">Dispositivi</a>
-							<a class="col-lg-2" href="assistenza">Assistenza</a>
+							<a class="col-lg-2" href="dispositi">Dispositivi</a>
+							<a class="col-lg-3" href="assistenza">Assistenza</a>
 						</div>
 					</div>
 
@@ -101,17 +102,19 @@
 		</div>
 
 		<div id="content" class="row">
+			<div class="col-xs-12 nopadding">
+	
+				<h1>Titolo</h1>
+	
+				Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+				eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+				ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+				aliquip ex ea commodo consequat. Duis aute irure dolor in
+				reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+				pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+				culpa qui officia deserunt mollit anim id est laborum.
 
-			<h1>Titolo</h1>
-
-			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-			eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-			ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-			aliquip ex ea commodo consequat. Duis aute irure dolor in
-			reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-			pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-			culpa qui officia deserunt mollit anim id est laborum.
-
+			</div>
 		</div>
 
 		<div id="footer" class="row middle-align"><!--
