--- a/testimonial.html
+++ b/testimonial.html
@@ -114,15 +114,19 @@
             </div>
         
             <div id="content" >
-                <div class="sottomenugrigio col-md-12 nopadding">
-                    <div class="col-md-4 sottomenugrigiodiv"><h2 class="titoloblu">INNOVAZIONE</h2></div>
-                    <div class="col-md-4 sottomenugrigiodiv" id="cellasottolineatablu"><h2 class="titoloblu">TESTIMONIAL</h2></div>
-                    <div class="col-md-4 sottomenugrigiodiv"><h2 class="titoloblu">PROGETTI</h2></div>
+                <div class="row grey-menu">
+
+                        <div class="col-md-4 "><a href="innovazione.html">INNOVAZIONE</a></div>
+                        <div class="col-md-4 current-link"><a href="testimonial.html">TESTIMONIAL</a></div>
+                        <div class="col-md-4 "><a href="progetti.html">PROGETTI</a></div>
+
                 </div>
                 <img class="immaginepresentazione" src="img/testimonial/testimonial.png" alt="testimonial tim" />
                 <div class="col-md-12 nopadding">
                     <p class="center">
+                        <span class="bigger">
                            Negli ultimi anni il nostro modo di comunicare è radicalmente cambiato. Forse non si può nemmeno più parlare di comunicazione, le nuove tecnologie infatti ci stanno portando verso un’era dove le connessioni tra gli individui sono più profonde e significative. TIM, che da sempre è sinonimo di comunicazione, si trasforma radicalmente per diventare un’azienda che la cui tecnologia consente alle persone di connettersi tra loro e comunicare. La campagna di lancio del nuovo posizionamento di TIM è nata per raccontare questo nuovo mondo connesso, attraverso il coinvolgimento di tre testimonial d’eccezione che presentano il loro punto di vista:  Sir Tim Berners-Lee, Fabio Fazio e Pif.
+                        </span>
                     </p>
                 </div>
                 <div id="id01"></div>
