--- a/pianimaincategory.html
+++ b/pianimaincategory.html
@@ -49,7 +49,7 @@
         {
             out += "<div class='col-sm-4 grey-background current-link'>" +
                         "<a href=\"pianisubcategory.html?id=" + arr[i].id + "\" >" +
-                        "<img src=\"" + arr[i].foto + "\" style='padding: 20px;'/>"+
+                        "<img src=\"" + arr[i].foto + "\" style='padding: 30px;'/>"+
                         "</a></div>";
             out2 +="<div class=\"col-sm-4 blu-menu\">"+
                 "<a href=\"pianisubcategory.html?id=" + arr[i].id + "\" >" +
@@ -145,8 +145,11 @@
                     <img src="img/piani/maincatpiani.jpg"  class="img-responsive" alt="Categorie Piani Tariffari" />
                 </div>
             </div>
-            <div class="row grey-menu" id="categorie_grey" ></div>
-            <div class="row blu-menu" id="categorie_blu" ></div>
+                <div class="col-xs-12">
+                    <div class="row grey-menu" id="categorie_grey" ></div>
+                    <div class="row blu-menu" id="categorie_blu" ></div>
+                </div>
+            
             <div class="row">
                 <div class="col-md-12">
                     <img src="img/piani/maincatfooter.jpg" class="img-responsive" alt="entra nella rete più grande d'italia" width="100%" />
