--- a/assingola.html
+++ b/assingola.html
@@ -122,9 +122,8 @@
             </div>
         
             <div id="content">
-                <div class="row barratitolo blu-background" id="categorie"></div>
-                <div class="row">
-                    <div class="col-md-12 nopadding" id="barragrigia"></div>
+                <div class="row blu-menu" id="categorie"></div>
+                <div class="row grey-menu" id="barragrigia">
                 </div>
                 <div class="row">
                     <div class="col-md-12 nopadding">
