--- a/pianiselectedcategory.html
+++ b/pianiselectedcategory.html
@@ -56,11 +56,11 @@
         for(i = 0; i < arr.length; i++) 
         {
             out += "<div class=\"col-sm-3\"><div class='row'><div class='col-md-12'>"+
-                        "<a href=\"assubcategory.html?id=" + arr[i].id + "\" >"+
+                        "<a href=\"piano.html?id=" + arr[i].id + "\" >"+
                             "<img src=\"" + arr[i].foto + "\" style='width:100%'/>"+
                         "</a></div></div>"+
                         "<div class='row'><div class='col-md-12'>"+
-                            "<a href=\"assubcategory.html?id=" + arr[i].id + "\" >" + 
+                            "<a href=\"piano.html?id=" + arr[i].id + "\" >" + 
                                 arr[i].titolo +
                         "</a></div></div>"+
                         arr[i].prezzo +
