--- a/offerte.html
+++ b/offerte.html
@@ -105,8 +105,8 @@
 			</div>
 		</div>
 
-		<div id="content">
-			<div class="row">
+		<div class="row" id="content">
+
                 <div class="col-md-12 nopadding">
 
                     <img class=" img-responsive" src="img/offerte/offertepresentazione.jpg" alt="offerte tim">
@@ -122,7 +122,7 @@
                         <div class="col-md-6"></div>
                     </div>
                 </div>
-            </div>
+
 		</div>
 
 		<div id="footer" class="row middle-align"><!--
