update with text on an image

--- a/offerte.html
+++ b/offerte.html
@@ -113,10 +113,10 @@
                     <div class="row">
                         <div class="col-md-6 inner-presentation">
                             <div>
-                                <h1 ><small class="text-left">OFFERTE TIM</small></h1>
+                                <h1 class="text-left">OFFERTE TIM</h1>
                             </div>
                             <div>
-                                <h2><small class="text-left">Solo per te le gandi offerte TIM.</small></h2>
+                                <h2 class="text-left">Solo per te le gandi offerte TIM.</h2>
                             </div>
                         </div>
                         <div class="col-md-6"></div>
