--- a/offerte.html
+++ b/offerte.html
@@ -106,8 +106,8 @@
 		</div>
 
 		<div class="row" id="content">
-
-                <div class="col-md-12 nopadding">
+            <div class="row">
+                <div class="col-md-12 ">
 
                     <img class=" img-responsive" src="img/offerte/offertepresentazione.jpg" alt="offerte tim">
                     <div class="row">
@@ -122,7 +122,7 @@
                         <div class="col-md-6"></div>
                     </div>
                 </div>
-
+            </div>
 		</div>
 
 		<div id="footer" class="row middle-align"><!--
