--- a/testimonial.html
+++ b/testimonial.html
@@ -47,7 +47,7 @@
                 var out="";
 
                 for(i = 0; i < arr.length; i++) {
-                    out += "<div class=\"row\"><div class=\"col-md-12\">"+ "<div style=\"z-index: 2;\"><img class=\"img-responsive\"src=\" " + arr[i].foto + "\" alt=\" "+ arr[i].nome +"tim\"></div><div class=\"inner-presentation\"><div style=\"z-index: 5;\"><h1><br/>" + arr[i].nome + "</h1></div><div style=\"z-index: 5;\"><h2>" + arr[i].frase1 + "</h2><h2>" + arr[i].frase2 + "</h2></div></div><div style=\"z-index: 5; background-color: #004890;\">" + "<a href=\" " +arr[i].linkspot +"\">guarda lo spot</a>"+"</div></div></div>";
+                    out += "<div class=\"row\"><div class=\"col-md-12\">"+ "<div style=\"z-index: 2;\"><img class=\"img-responsive\"src=\" " + arr[i].foto + "\" alt=\" "+ arr[i].nome +"tim\"></div><div class=\"inner-presentation\"><div style=\"z-index: 5;\"><h1><br/>" + arr[i].nome + "</h1></div><div style=\"z-index: 5;\"><h2>" + arr[i].frase1 + "</h2><h2>" + arr[i].frase2 + "</h2></div></div><div style=\"z-index: 5; background-color: #004890;\">" + "<a href=\" " +arr[i].linkspot +"\" class=\"btn btn-primary\">guarda lo spot</a>"+"</div></div></div>";
                 }
                 document.getElementById("id01").innerHTML = out;
             }
