--- a/piani/piano.html
+++ b/piani/piano.html
@@ -2,8 +2,10 @@
 <html>
 
     <head>
-        <meta charset="utf-8"> 
-        <title>Piani Tariffari</title>
+    
+    <meta charset="utf-8"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1">  
+    <title>Piani Tariffari</title>
         
     <!-- Bootstrap: Latest compiled and minified CSS -->
     <link rel="stylesheet"	href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
